Create dedicated data class for top/rare args
Signed-off-by: Simeon Widdis <sawiddis@amazon.com>